--- a/resources/meson.build
+++ b/resources/meson.build
@@ -9,18 +9,21 @@ if host_platform == 'windows'
 	)
 endif
 
-data_files += to_array.process('cps16.png', extra_args: 'cps16_png')
-data_files += to_array.process('cps32.png', extra_args: 'cps32_png')
-data_files += to_array.process('exe48.png', extra_args: 'exe48_png')
-data_files += to_array.process('save.xml', extra_args: 'save_xml')
-data_files += to_array.process(configure_file(
-	input: 'powder.template.desktop',
-	output: 'powder.desktop',
-	configuration: conf_data,
-), extra_args: 'powder_desktop')
+if host_platform == 'linux'
+	data_files += to_array.process('cps16.png', extra_args: 'cps16_png')
+	data_files += to_array.process('cps32.png', extra_args: 'cps32_png')
+	data_files += to_array.process('exe48.png', extra_args: 'exe48_png')
+	data_files += to_array.process('icon/powder-128.png', extra_args: 'icon_png')
+	data_files += to_array.process('save.xml', extra_args: 'save_xml')
+	data_files += to_array.process(configure_file(
+		input: 'powder.template.desktop',
+		output: 'powder.desktop',
+		configuration: conf_data,
+	), extra_args: 'powder_desktop')
 
-configure_file(
-	input: 'appdata.template.xml',
-	output: 'appdata.xml',
-	configuration: conf_data,
-)
+	configure_file(
+		input: 'appdata.template.xml',
+		output: 'appdata.xml',
+		configuration: conf_data,
+	)
+endif
